# python-dependency-injector

./: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
src/dependency_injector/: _cwiring.c  containers.c
